--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -66,7 +66,7 @@ With {{prodname}} WAF, you gain visibility into internal east/west traffic at th
 #### Step 1: Enable WAF in you cluster
 
 You can enable WAF in your cluster using the User Interface:
-- click on *Threat Defense* and select *Web Application Firewall*
+- click on **Threat Defense** and select **Web Application Firewall**
 - on the page click on *Configure Web Application Firewall* to enable WAF in the cluster.
 
 <img
@@ -81,9 +81,7 @@ You can enable WAF in your cluster using the User Interface:
   width='600'
 />
 
-**Alternatively**
-
-You can enable WAF manually by configuring ApplicationLayer CRD.
+**Alternatively You can enable WAF manually by configuring ApplicationLayer CRD.**
 
 Create or update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the webApplicationFirewall section of the file. Ensure value of the field is set to Enabled.
 
