--- a/calico-cloud/threat/web-application-firewall.mdx
+++ b/calico-cloud/threat/web-application-firewall.mdx
@@ -66,8 +66,7 @@ With {{prodname}} WAF, you gain visibility into internal east/west traffic at th
 #### Step 1: Enable WAF in you cluster
 
 You can enable WAF in your cluster using the User Interface:
-- click on *Threat Defense* and select *Web Application Firewall*
-- on the page click on *Configure Web Application Firewall* to enable WAF in the cluster.
+- click on **Threat Defense** and select **Web Application Firewall**
 
 <img
   src='/img/calico-enterprise/master/waf-menu.png'
@@ -75,15 +74,15 @@ You can enable WAF in your cluster using the User Interface:
   width='600'
 />
 
+- on the page click on *Configure Web Application Firewall* to enable WAF in the cluster.
+
 <img
   src='/img/calico-enterprise/master/waf-configure.png'
   alt='Configure cluster for WAF'
   width='600'
 />
 
-**Alternatively**
-
-You can enable WAF manually by configuring ApplicationLayer CRD.
+**Alternatively You can enable WAF manually by configuring ApplicationLayer CRD.**
 
 Create or update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the webApplicationFirewall section of the file. Ensure value of the field is set to Enabled.
 
@@ -117,9 +116,7 @@ You will be presented with a window containing a *kubectl* command that you will
   width='600'
 />
 
-**Alternatively**
-
-You can annotate the services you wish to enable WAF for as shown.
+**Alternatively You can annotate the services you wish to enable WAF for as shown.**
 
 ```batch
 kubectl annotate svc <service-name> -n <service-namespace> projectcalico.org/l7-logging=true
