--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -67,13 +67,14 @@ With {{prodname}} WAF, you gain visibility into internal east/west traffic at th
 
 You can enable WAF in your cluster using the User Interface:
 - click on **Threat Defense** and select **Web Application Firewall**
-- on the page click on *Configure Web Application Firewall* to enable WAF in the cluster.
 
 <img
   src='/img/calico-enterprise/master/waf-menu.png'
   alt='Threat Defense / WAF'
   width='600'
 />
+
+- on the page click on *Configure Web Application Firewall* to enable WAF in the cluster.
 
 <img
   src='/img/calico-enterprise/master/waf-configure.png'
@@ -115,9 +116,7 @@ You will be presented with a window containing a *kubectl* command that you will
   width='600'
 />
 
-**Alternatively**
-
-You can annotate the services you wish to enable WAF for as shown.
+**Alternatively You can annotate the services you wish to enable WAF for as shown.**
 
 ```batch
 kubectl annotate svc <service-name> -n <service-namespace> projectcalico.org/l7-logging=true
