--- a/calico/network-policy/istio/http-methods.mdx
+++ b/calico/network-policy/istio/http-methods.mdx
@@ -28,7 +28,7 @@ Calico network policy supports restricting traffic based on HTTP methods and pat
 
 ## Before you begin...
 
-[Enable application layer policy[Enable application layer policy](app-layer-policy.mdx)
+[Enable application layer policy](app-layer-policy.mdx)
 
 ## How to
 
