--- a/calico/getting-started/kubernetes/windows-calico/quickstart.mdx
+++ b/calico/getting-started/kubernetes/windows-calico/quickstart.mdx
@@ -106,7 +106,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{filesUrl}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {{calicoReleasesURL}}/{{releaseTitle}}install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
@@ -204,7 +204,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
    ```powershell
-   Invoke-WebRequest {{filesUrl}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
+   Invoke-WebRequest {{calicoReleasesURL}}/{{releaseTitle}}install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
 1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
