--- a/calico/reference/installation/_api.mdx
+++ b/calico/reference/installation/_api.mdx
@@ -3549,7 +3549,7 @@ map[string]string
 <p>Labels is a map of string keys and values that may match replica set and
 service selectors. Each of these key/value pairs are added to the
 object&rsquo;s labels provided the key does not already exist in the object&rsquo;s labels.
-If not specified will default to projectcalico.org/egw:<NAME>, where <NAME> is
+If not specified will default to projectcalico.org/egw:[name], where [name] is
 the name of the Egress Gateway resource.</p>
 </td>
 </tr>
