--- a/calico_versioned_docs/version-3.24/operations/index.mdx
+++ b/calico_versioned_docs/version-3.24/operations/index.mdx
@@ -3,7 +3,7 @@ description: Post-installation tasks for managing Calico including upgrading and
 hide_table_of_contents: true
 ---
 
-# Maintenance
+# Operations
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
