--- a/calico_versioned_docs/version-3.24/operations/decommissioning-a-node.mdx
+++ b/calico_versioned_docs/version-3.24/operations/decommissioning-a-node.mdx
@@ -31,7 +31,7 @@ information.
 - Prior to removing any Node resource from the datastore the `{{nodecontainer}}`
   container should be stopped on the corresponding host and it should be
   ensured that it will not be restarted.
-- You must have [calicoctl setup](/operations/calicoctl/install.mdx) and operational to run
+- You must have [calicoctl configured](calicoctl/install.mdx) and operational to run
   the commands listed here.
 
 ## Removing a node resource
@@ -66,7 +66,7 @@ To remove several Nodes, a file can be created with several Node resources and
 then be passed to the `calicoctl delete` command with the `-f` flag.
 Below is an example of how to create a file of Nodes and delete them.
 
-1. Create a file with the [Node resources][node resource reference] that need
+1. Create a file with the [Node resources](../reference/resources/node.mdx) that need
    to be removed. For example:
 
    ```yaml
@@ -92,8 +92,3 @@ Below is an example of how to create a file of Nodes and delete them.
    calicoctl delete -f nodes_to_delete.yaml
    ```
 
-<<<<<<< HEAD
-
-=======
-[Node resource reference]: ../reference/resources/node.mdx[calicoctl setup]: /operations/clis/calicoctl/install
->>>>>>> df79ca41114e52f0360c914f280b59001c8e07c3
