--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/windows-calico/quickstart.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/windows-calico/quickstart.mdx
@@ -109,7 +109,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
    Invoke-WebRequest {{filesUrl}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
-1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters]. (#configure-installation-parameters).
+1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
    The PowerShell script downloads {{prodnameWindows}} release binary, Kubernetes binaries, Windows utilities files, configures {{prodnameWindows}}, and starts the Calico service.
 
    **Kubernetes datastore (default)**
@@ -136,13 +136,8 @@ The following steps install a Kubernetes cluster on a single Windows node with a
 
    :::note
 
-   You do not need to pass a parameter if the default value of the parameter is correct for your cluster.
-
-   :::
-
-   :::note
-
-   If your Windows nodes have multiple network adapters, you can configure the one used for VXLAN by editing `VXLAN_ADAPTER` in `{{rootDirWindows}}\config.ps1`, then restarting {{prodnameWindows}}.
+    - You do not need to pass a parameter if the default value of the parameter is correct for your cluster.
+    - If your Windows nodes have multiple network adapters, you can configure the one used for VXLAN by editing `VXLAN_ADAPTER` in `{{rootDirWindows}}\config.ps1`, then restarting {{prodnameWindows}}.
 
    :::
 
@@ -212,7 +207,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
    Invoke-WebRequest {{filesUrl}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
-1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters]. (#configure-installation-parameters).
+1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
    The PowerShell script downloads {{prodnameWindows}} release binary, Kubernetes binaries, Windows utilities files, configures {{prodnameWindows}}, and starts the Calico service.
 
    You do not need to pass a parameter if the default value of the parameter is correct for your cluster.
@@ -299,7 +294,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
    Invoke-WebRequest {{url}}/scripts/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
    ```
 
-1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters]. (#configure-installation-parameters).
+1. Install {{prodnameWindows}} for your datastore with using the default parameters or [customize installation parameters](#configure-installation-parameters).
    The PowerShell script downloads {{prodnameWindows}} release binary, Kubernetes binaries, Windows utilities files, configures {{prodnameWindows}}, and starts the Calico service.
 
    You do not need to pass a parameter if the default value of the parameter is correct for your cluster.
