--- a/calico-cloud/threat/web-application-firewall.mdx
+++ b/calico-cloud/threat/web-application-firewall.mdx
@@ -79,7 +79,7 @@ On the Manager UI, click **Threat Defense -> Web Application Firewall -> Configu
 
 **Alternatively you can enable WAF manually by configuring ApplicationLayer CRD.**
 
-Create or update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the webApplicationFirewall section of the file. Ensure value of the field is set to Enabled.
+Create or update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` section of the file. Ensure value of the field is set to `Enabled`.
 
 Example:
 
@@ -92,11 +92,20 @@ spec:
   webApplicationFirewall: Enabled
 ```
 
-:::note
+#### Disabling WAF
 
-WAF can be disabled in your cluster by setting the value of the `webApplicationFirewall` field to `Disabled`.
+To disable WAF update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` section of the file and ensure value of the field is set to `Disabled`.
 
-:::
+Example:
+
+```yaml
+apiVersion: operator.tigera.io/v1
+kind: ApplicationLayer
+metadata:
+  name: tigera-secure
+spec:
+  webApplicationFirewall: Disabled
+```
 
 #### Step 2: Select traffic for WAF
 
